@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.urlresolver" name="URLResolver" version="5.0.52" provider-name="tvaddons">
+<addon id="script.module.urlresolver" name="URLResolver" version="5.0.53" provider-name="tvaddons">
     <requires>
         <import addon="xbmc.python" version="2.1.0" />
         <import addon="plugin.video.youtube" optional="true" />
