@@ -1,3 +1,15 @@
+[B]Version 5.0.53 (February 11, 2020)[/B]
+- Code Base Changes:
+    - none
+- Resolvers Added:
+    - thevideo_me
+- Resolvers Fixed/Updated:
+    - vevio
+- Resolvers Removed
+    - none
+- Languages Added/Updated
+    - none
+
 [B]Version 5.0.52 (February 6, 2020)[/B]
 - Code Base Changes:
     - none
